--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ EMBEDDING_CHUNK_SIZE=2048
 # -----------------------------
 # Retrieval (Milvus)
 # -----------------------------
-MILVUS_URI=127.0.0.1:19530
+MILVUS_URI=your-cloud-milvus-endpoint:19530
 MILVUS_TOKEN=change-me
 MILVUS_COLLECTION_NAME=travel_policy_embeddings
 MILVUS_DIM=1536
@@ -71,12 +71,6 @@ MCP_AIRLINE_COMMAND=npx
 MCP_AIRLINE_ARGS=-y,mcp-remote,http://127.0.0.1:8001/mcp
 MCP_HOTEL_COMMAND=npx
 MCP_HOTEL_ARGS=-y,mcp-remote,http://127.0.0.1:8002/mcp
-
-# -----------------------------
-# Object storage (Milvus dependencies)
-# -----------------------------
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
 
 # -----------------------------
 # Frontend settings
