--- a/.env.example
+++ b/.env.example
@@ -65,12 +65,8 @@ RAG_CONTEXT_MAX_CHARS=1800
 # -----------------------------
 AIRLINE_MCP_PORT=8001
 HOTEL_MCP_PORT=8002
-MCP_AIRLINE_URL=http://127.0.0.1:8001
-MCP_HOTEL_URL=http://127.0.0.1:8002
-MCP_AIRLINE_COMMAND=npx
-MCP_AIRLINE_ARGS=-y,mcp-remote,http://127.0.0.1:8001/mcp
-MCP_HOTEL_COMMAND=npx
-MCP_HOTEL_ARGS=-y,mcp-remote,http://127.0.0.1:8002/mcp
+MCP_AIRLINE_URL=http://127.0.0.1:8001/mcp
+MCP_HOTEL_URL=http://127.0.0.1:8002/mcp
 
 # -----------------------------
 # Frontend settings
